Исправление CORS Добавление BeanValidation Добавление cроки статуса

--- a/human-client-app/src/main/webapp/index.html
+++ b/human-client-app/src/main/webapp/index.html
@@ -35,6 +35,7 @@
 			<button id = "actionBtn" class="pure-button pure-button-primary">name</button>
 			<button id = "chancelActionBtn" class="pure-button button-remove">отмена</button>
 		</fieldset>
+		<div id="mes"> </div>
 	</div>
  	<div class="pure-form"">
 		<div style="width: 100%; margin: 12px">
